# robocon11-second-group-framework

./: .clang-tidy  .clangd  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_SUMMARY.md  README.md  format_all.ps1  format_all.sh  robocon11-second-group-framework.ioc  stm32_lock.h  代码规范.md
.github/: copilot-instructions.md
Core/: .clang-tidy
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.cpp
Middlewares/GDUT_RC_Library/: CMakeLists.txt
Middlewares/GDUT_RC_Library/BSP/: bsp_atomic.hpp  bsp_can.cpp  bsp_can.hpp  bsp_clock.hpp  bsp_dma.hpp  bsp_event.hpp  bsp_function.hpp  bsp_gpio_pin.hpp  bsp_memory_resource.hpp  bsp_memorypool.hpp  bsp_message_queue.hpp  bsp_mutex.hpp  bsp_semaphore.hpp  bsp_shared_ptr.hpp  bsp_spi.hpp  bsp_thread.hpp  bsp_timer.hpp  bsp_type_traits.hpp  bsp_uart.hpp  bsp_uncopyable.hpp  gpio_pin.hpp
Middlewares/GDUT_RC_Library/CPP_Library/: CMakeLists.txt  script.py
Middlewares/GDUT_RC_Library/CPP_Library/cmake/: helpers.cmake
Middlewares/GDUT_RC_Library/CPP_Library/include/: absolute.hpp  algorithm.hpp  alignment.hpp  array.hpp  array_view.hpp  array_wrapper.hpp  atomic.hpp  base64.hpp  base64_decoder.hpp  base64_encoder.hpp  basic_format_spec.hpp  basic_string.hpp  basic_string_stream.hpp  binary.hpp  bip_buffer_spsc_atomic.hpp  bit.hpp  bit_stream.hpp  bitset.hpp  bloom_filter.hpp  bresenham_line.hpp  buffer_descriptors.hpp  byte.hpp  byte_stream.hpp  callback.hpp  callback_service.hpp  callback_timer.hpp  callback_timer_atomic.hpp  callback_timer_deferred_locked.hpp  callback_timer_interrupt.hpp  callback_timer_locked.hpp  char_traits.hpp  checksum.hpp  chrono.hpp  circular_buffer.hpp  circular_iterator.hpp  closure.hpp  combinations.hpp  compare.hpp  concepts.hpp  const_map.hpp  (+259 more)
Middlewares/GDUT_RC_Library/CPP_Library/include/atomic/: atomic_arm.hpp  atomic_clang_sync.hpp  atomic_gcc_sync.hpp  atomic_std.hpp
Middlewares/GDUT_RC_Library/CPP_Library/include/deprecated/: factory.hpp
Middlewares/GDUT_RC_Library/CPP_Library/include/experimental/: bit_cast.hpp  class_traits.hpp  icache.hpp  mem_cast.hpp  singleton.hpp
Middlewares/GDUT_RC_Library/CPP_Library/include/generators/: fsm_generator.hpp  largest_generator.hpp  message_packet_generator.hpp  message_router_generator.hpp  smallest_generator.hpp  type_lookup_generator.hpp  type_select_generator.hpp  type_traits_generator.hpp  variant_pool_generator.hpp
Middlewares/GDUT_RC_Library/CPP_Library/include/mutex/: mutex_arm.hpp  mutex_clang_sync.hpp  mutex_cmsis_os2.hpp  mutex_freertos.hpp  mutex_gcc_sync.hpp  mutex_std.hpp  mutex_threadx.hpp
Middlewares/GDUT_RC_Library/CPP_Library/include/private/: addressof.hpp  bitset_legacy.hpp  bitset_new.hpp  choose_namespace.hpp  comparator_is_transparent.hpp  crc_implementation.hpp  crc_parameters.hpp  delegate_cpp03.hpp  delegate_cpp11.hpp  diagnostic_array_bounds_push.hpp  diagnostic_cxx_20_compat_push.hpp  diagnostic_deprecated_push.hpp  diagnostic_float_equal_push.hpp  diagnostic_format_security_push.hpp  diagnostic_null_dereference_push.hpp  diagnostic_pessimizing_move_push.hpp  diagnostic_pop.hpp  diagnostic_self_assign_overloaded_push.hpp  diagnostic_stringop_overflow_push.hpp  diagnostic_stringop_overread_push.hpp  diagnostic_uninitialized_push.hpp  diagnostic_unused_function_push.hpp  diagnostic_useless_cast_push.hpp  dynamic_extent.hpp  ivectorpointer.hpp  minmax_pop.hpp  minmax_push.hpp  pvoidvector.hpp  to_string_helper.hpp  tuple_element.hpp  tuple_size.hpp  variant_legacy.hpp  variant_select_do_operator.hpp  variant_select_do_visitor.hpp  variant_variadic.hpp  vector_base.hpp
Middlewares/GDUT_RC_Library/CPP_Library/include/private/chrono/: clocks.hpp  day.hpp  duration.hpp  hh_mm_ss.hpp  last_spec.hpp  month.hpp  month_day.hpp  month_weekday.hpp  operators.hpp  time_point.hpp  time_zone.hpp  weekday.hpp  year.hpp  year_month.hpp  year_month_day.hpp  year_month_weekday.hpp
Middlewares/GDUT_RC_Library/CPP_Library/include/profiles/: arduino_arm.hpp  armv5.hpp  armv5_no_stl.hpp  armv6.hpp  armv6_no_stl.hpp  armv7.hpp  armv7_no_stl.hpp  auto.hpp  clang_generic.hpp  clang_generic_no_stl.hpp  cpp03.hpp  cpp03_no_stl.hpp  cpp11.hpp  cpp11_no_stl.hpp  cpp14.hpp  cpp14_no_stl.hpp  cpp17.hpp  cpp17_no_stl.hpp  determine_builtin_support.hpp  determine_compiler.hpp  determine_compiler_language_support.hpp  determine_compiler_version.hpp  determine_development_os.hpp  gcc_generic.hpp  gcc_generic_no_stl.hpp  gcc_linux_x86.hpp  gcc_linux_x86_no_stl.hpp  gcc_windows_x86.hpp  gcc_windows_x86_no_stl.hpp  msvc_x86.hpp  msvc_x86_no_stl.hpp  segger_gcc_stlport.hpp  ticc.hpp  ticc_no_stl.hpp
Middlewares/GDUT_RC_Library/Experimental/: bsp_can.cpp  bsp_can.hpp  bsp_spi.hpp
Middlewares/GDUT_RC_Library/test/: test.cpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
debug/: launch.json  settings.json
docs/: VS_Code_Configuration.md  bsp_atomic.md  bsp_memory_resource.md  bsp_memorypool.md  bsp_mutex.md  bsp_semaphore.md  bsp_shared_ptr.md  bsp_thread.md  bsp_type_traits.md
docs/BSP/: bsp_can.md  bsp_clock.md  bsp_dma.md  bsp_event.md  bsp_function.md  bsp_gpio_pin.md  bsp_memory_resource.md  bsp_message_queue.md  bsp_mutex.md  bsp_semaphore.md  bsp_spi.md  bsp_thread.md  bsp_timer.md  bsp_type_traits.md  bsp_uart.md  bsp_uncopyable.md
